--- a/contact.html
+++ b/contact.html
@@ -25,9 +25,9 @@
           Name: <input type="text" name="name"><br>
           Address: <input type="text" name="name">
           <select name="state">
-            <option class = "state" value="UT">Utah</option>
-            <option class = "state" value="CA">California</option>
-            <option class = "state" value="NY">New York</option>
+            <option id = "state1" class = "state" value="UT">Utah</option>
+            <option id = "state2" class = "state" value="CA">California</option>
+            <option id = "state3" class = "state" value="NY">New York</option>
           </select>        
       </fieldset>
       <input id="maleRB" type="radio" name="gender" value="male">
@@ -38,7 +38,7 @@
       <input id='newsCB' type="checkbox" name="news" value="news">
         <label for="newsCB">
           I would like to subscribe to the newsletter.
-        </label></br>
+        </label><br>
       <button type="submit" name="SubmitButton" value="Submit">Submit</button>
       <button type="reset" name="ResetButton" value="Reset">Reset</button>
     </form>
@@ -48,8 +48,17 @@
 			//Change the states that are used in the dropdown box to "Missouri", "Iowa", "Nebraska". Use the states abbreviation for the value property.
 
 			
-			
-			
+            var state1 = document.getElementById("state1");
+            state1.value = "MO";
+            state1.innerHTML = "Missouri";
+        
+            var state2 = document.getElementById("state2");
+            state2.value = "IA";
+            state2.innerHTML = "Iowa";
+        
+            varstate3 = document.getElementById("state3");
+           state3.value = "NE";
+           state3.innerHTML = "Nebraska";			
 			
 			
 			
@@ -58,7 +67,10 @@
 			//Comment out the code for Step 5. On the Contact.html page, set a class id called "state" on each option in the select tag. 
 			//Write the code to change all of the states to the word "Hello". 
 
-			
+			//var el = document.getElementsByClassName("state");
+           //for (i = 0; i < el.length; i++) {
+            //el[i].value = "Hello";
+            //el[i].innerHTML = "Hello";}
 			
 			
 			
